@startuml

title __RESOURCES's Class Diagram__\n

  namespace com.vrush.microservices.booking {
    namespace resources {
      class com.vrush.microservices.booking.resources.BookingResource {
          {static} - log : Logger
          + BookingResource()
          + save()
      }
    }
  }
  

  namespace com.vrush.microservices.booking {
    namespace resources {
      class com.vrush.microservices.booking.resources.RoomResource {
          {static} - log : Logger
          + RoomResource()
          + save()
      }
    }
  }
  

  com.vrush.microservices.booking.resources.BookingResource o-- com.vrush.microservices.booking.service.BookingService : service
  com.vrush.microservices.booking.resources.RoomResource o-- com.vrush.microservices.booking.service.RoomService : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
